// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorGroupOverview -> List should render empty state 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <div
      className="euiTableHeaderMobile"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        />
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            className="euiTableSortMobile"
          >
            <div
              className="euiPopover euiPopover--anchorDownRight"
            >
              <div
                className="euiPopover__anchor"
              >
                <button
                  className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <span
                      className="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="arrowDown"
                      size="s"
                    />
                    <span
                      className="euiButtonEmpty__text"
                    >
                      Sorting
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <table
      className="euiTable euiTable--responsive"
      id="generated-id"
      tabIndex={-1}
    >
      <caption
        className="euiScreenReaderOnly euiTableCaption"
      />
      <thead>
        <tr>
          <th
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_groupId_0"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": "96px",
              }
            }
          >
            <span
              className="euiTableCellContent"
            >
              <span
                className="euiTableCellContent__text"
                title="Group ID "
              >
                Group ID
                 
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <span
                    aria-label="Info"
                    className="eui-alignTop"
                    color="subdued"
                    data-euiicon-type="questionInCircle"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    size="s"
                    tabIndex={0}
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_type_1"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <span
              className="euiTableCellContent"
            >
              <span
                className="euiTableCellContent__text"
                title="Type"
              >
                Type
              </span>
            </span>
          </th>
          <th
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_message_2"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <span
              className="euiTableCellContent"
            >
              <span
                className="euiTableCellContent__text"
                title="Error message and culprit"
              >
                Error message and culprit
              </span>
            </span>
          </th>
          <td
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_handled_3"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <span
              className="euiTableCellContent euiTableCellContent--alignRight"
            >
              <span
                className="euiTableCellContent__text"
              />
            </span>
          </td>
          <th
            aria-live="polite"
            aria-sort="descending"
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_occurrenceCount_4"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <button
              className="euiTableHeaderButton euiTableHeaderButton-isSorted"
              data-test-subj="tableHeaderSortButton"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiTableCellContent euiTableCellContent--alignRight"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Occurrences"
                >
                  Occurrences
                </span>
                <span
                  className="euiTableSortIcon"
                  data-euiicon-type="sortDown"
                  size="m"
                />
              </span>
            </button>
          </th>
          <th
            aria-live="polite"
            aria-sort="none"
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_latestOccurrenceAt_5"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <button
              className="euiTableHeaderButton"
              data-test-subj="tableHeaderSortButton"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiTableCellContent euiTableCellContent--alignRight"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Latest occurrence"
                >
                  Latest occurrence
                </span>
              </span>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="euiTableRow"
        >
          <td
            className="euiTableRowCell euiTableRowCell--isMobileFullWidth"
            colSpan={6}
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableCellContent euiTableCellContent--alignCenter"
            >
              <span
                className="euiTableCellContent__text"
              >
                No errors found
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ErrorGroupOverview -> List should render with data 1`] = `
.c0 {
  font-family: 'Roboto Mono','Consolas','Menlo','Courier',monospace;
}

.c2 {
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1 {
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c3 {
  font-family: 'Roboto Mono','Consolas','Menlo','Courier',monospace;
  font-size: 18px;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  font-family: 'Roboto Mono','Consolas','Menlo','Courier',monospace;
}

<div
  className="euiBasicTable"
>
  <div>
    <div
      className="euiTableHeaderMobile"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        />
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            className="euiTableSortMobile"
          >
            <div
              className="euiPopover euiPopover--anchorDownRight"
            >
              <div
                className="euiPopover__anchor"
              >
                <button
                  className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <span
                      className="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="arrowDown"
                      size="s"
                    />
                    <span
                      className="euiButtonEmpty__text"
                    >
                      Sorting
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <table
      className="euiTable euiTable--responsive"
      id="generated-id"
      tabIndex={-1}
    >
      <caption
        className="euiScreenReaderOnly euiTableCaption"
      />
      <thead>
        <tr>
          <th
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_groupId_0"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": "96px",
              }
            }
          >
            <span
              className="euiTableCellContent"
            >
              <span
                className="euiTableCellContent__text"
                title="Group ID "
              >
                Group ID
                 
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <span
                    aria-label="Info"
                    className="eui-alignTop"
                    color="subdued"
                    data-euiicon-type="questionInCircle"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    size="s"
                    tabIndex={0}
                  />
                </span>
              </span>
            </span>
          </th>
          <th
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_type_1"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <span
              className="euiTableCellContent"
            >
              <span
                className="euiTableCellContent__text"
                title="Type"
              >
                Type
              </span>
            </span>
          </th>
          <th
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_message_2"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <span
              className="euiTableCellContent"
            >
              <span
                className="euiTableCellContent__text"
                title="Error message and culprit"
              >
                Error message and culprit
              </span>
            </span>
          </th>
          <td
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_handled_3"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <span
              className="euiTableCellContent euiTableCellContent--alignRight"
            >
              <span
                className="euiTableCellContent__text"
              />
            </span>
          </td>
          <th
            aria-live="polite"
            aria-sort="descending"
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_occurrenceCount_4"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <button
              className="euiTableHeaderButton euiTableHeaderButton-isSorted"
              data-test-subj="tableHeaderSortButton"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiTableCellContent euiTableCellContent--alignRight"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Occurrences"
                >
                  Occurrences
                </span>
                <span
                  className="euiTableSortIcon"
                  data-euiicon-type="sortDown"
                  size="m"
                />
              </span>
            </button>
          </th>
          <th
            aria-live="polite"
            aria-sort="none"
            className="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_latestOccurrenceAt_5"
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <button
              className="euiTableHeaderButton"
              data-test-subj="tableHeaderSortButton"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiTableCellContent euiTableCellContent--alignRight"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Latest occurrence"
                >
                  Latest occurrence
                </span>
              </span>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="euiTableRow"
        >
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": "96px",
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Group ID
               
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  aria-label="Info"
                  className="eui-alignTop"
                  color="subdued"
                  data-euiicon-type="questionInCircle"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  size="s"
                  tabIndex={0}
                />
              </span>
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <a
                className="euiLink euiLink--primary c0"
                href="/basepath/app/apm/services/opbeans-python/errors/a0ce2c8978ef92cdf2ff163ae28576ee"
                rel="noreferrer"
              >
                a0ce2
              </a>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Type
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <a
                className="euiLink euiLink--primary c1"
                href="/basepath/app/apm/services/opbeans-python/errors?page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:%22AssertionError%22"
                rel="noreferrer"
                title="AssertionError"
              >
                AssertionError
              </a>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Error message and culprit
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <div
                className="c2"
              >
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    className="euiLink euiLink--primary c3"
                    href="/basepath/app/apm/services/opbeans-python/errors/a0ce2c8978ef92cdf2ff163ae28576ee"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    rel="noreferrer"
                  >
                    About to blow up!
                  </a>
                </span>
                <br />
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <div
                    className="c4"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    elasticapm.contrib.django.client.capture
                  </div>
                </span>
              </div>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            />
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Occurrences
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            >
              75
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Latest occurrence
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                1337 minutes ago (mocking 1515578797)
              </span>
            </div>
          </td>
        </tr>
        <tr
          className="euiTableRow"
        >
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": "96px",
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Group ID
               
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  aria-label="Info"
                  className="eui-alignTop"
                  color="subdued"
                  data-euiicon-type="questionInCircle"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  size="s"
                  tabIndex={0}
                />
              </span>
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <a
                className="euiLink euiLink--primary c0"
                href="/basepath/app/apm/services/opbeans-python/errors/f3ac95493913cc7a3cfec30a19d2120a"
                rel="noreferrer"
              >
                f3ac9
              </a>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Type
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <a
                className="euiLink euiLink--primary c1"
                href="/basepath/app/apm/services/opbeans-python/errors?page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:%22AssertionError%22"
                rel="noreferrer"
                title="AssertionError"
              >
                AssertionError
              </a>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Error message and culprit
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <div
                className="c2"
              >
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    className="euiLink euiLink--primary c3"
                    href="/basepath/app/apm/services/opbeans-python/errors/f3ac95493913cc7a3cfec30a19d2120a"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    rel="noreferrer"
                  >
                    AssertionError: 
                  </a>
                </span>
                <br />
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <div
                    className="c4"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    opbeans.views.oopsie
                  </div>
                </span>
              </div>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            />
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Occurrences
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            >
              75
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Latest occurrence
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                1337 minutes ago (mocking 1515578797)
              </span>
            </div>
          </td>
        </tr>
        <tr
          className="euiTableRow"
        >
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": "96px",
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Group ID
               
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  aria-label="Info"
                  className="eui-alignTop"
                  color="subdued"
                  data-euiicon-type="questionInCircle"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  size="s"
                  tabIndex={0}
                />
              </span>
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <a
                className="euiLink euiLink--primary c0"
                href="/basepath/app/apm/services/opbeans-python/errors/e90863d04b7a692435305f09bbe8c840"
                rel="noreferrer"
              >
                e9086
              </a>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Type
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <a
                className="euiLink euiLink--primary c1"
                href="/basepath/app/apm/services/opbeans-python/errors?page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:%22AssertionError%22"
                rel="noreferrer"
                title="AssertionError"
              >
                AssertionError
              </a>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Error message and culprit
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <div
                className="c2"
              >
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    className="euiLink euiLink--primary c3"
                    href="/basepath/app/apm/services/opbeans-python/errors/e90863d04b7a692435305f09bbe8c840"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    rel="noreferrer"
                  >
                    AssertionError: Bad luck!
                  </a>
                </span>
                <br />
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <div
                    className="c4"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    opbeans.tasks.update_stats
                  </div>
                </span>
              </div>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            />
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Occurrences
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            >
              24
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Latest occurrence
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                1337 minutes ago (mocking 1515578796)
              </span>
            </div>
          </td>
        </tr>
        <tr
          className="euiTableRow"
        >
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": "96px",
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Group ID
               
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  aria-label="Info"
                  className="eui-alignTop"
                  color="subdued"
                  data-euiicon-type="questionInCircle"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  size="s"
                  tabIndex={0}
                />
              </span>
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <a
                className="euiLink euiLink--primary c0"
                href="/basepath/app/apm/services/opbeans-python/errors/8673d8bf7a032e387c101bafbab0d2bc"
                rel="noreferrer"
              >
                8673d
              </a>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Type
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <a
                className="euiLink euiLink--primary c1"
                href="/basepath/app/apm/services/opbeans-python/errors?page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:%22AssertionError%22"
                rel="noreferrer"
                title="AssertionError"
              >
                AssertionError
              </a>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Error message and culprit
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <div
                className="c2"
              >
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    className="euiLink euiLink--primary c3"
                    href="/basepath/app/apm/services/opbeans-python/errors/8673d8bf7a032e387c101bafbab0d2bc"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    rel="noreferrer"
                  >
                    Customer with ID 8517 not found
                  </a>
                </span>
                <br />
                <span
                  className="euiToolTipAnchor"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <div
                    className="c4"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    opbeans.views.customer
                  </div>
                </span>
              </div>
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            />
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Occurrences
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            >
              15
            </div>
          </td>
          <td
            className="euiTableRowCell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Latest occurrence
            </div>
            <div
              className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                1337 minutes ago (mocking 1515578773)
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div>
    <div
      className="euiSpacer euiSpacer--m"
    />
    <div
      className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
    >
      <div
        className="euiFlexItem euiFlexItem--flexGrowZero"
      />
      <div
        className="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <nav
          className="euiPagination"
        >
          <button
            aria-label="Previous page"
            className="euiButtonIcon euiButtonIcon-isDisabled euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
            data-test-subj="pagination-button-previous"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
              className="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowLeft"
              size="m"
            />
          </button>
          <ul
            className="euiPagination__list"
          >
            <li
              className="euiPagination__item"
            >
              <button
                aria-controls="generated-id"
                aria-current={true}
                aria-label="Page 1 of 1"
                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                data-test-subj="pagination-button-0"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    1
                  </span>
                </span>
              </button>
            </li>
          </ul>
          <button
            aria-label="Next page"
            className="euiButtonIcon euiButtonIcon-isDisabled euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
            data-test-subj="pagination-button-next"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
              className="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
              size="m"
            />
          </button>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
